added changes to css

--- a/index.html
+++ b/index.html
@@ -10,20 +10,18 @@
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="./assets//css/style.css" />
 
-    <title>Dynamic Meme</title>
+    <title>Dynamic Memes</title>
 
 </head>
 
 <header>
-    <h1 class="Title"> Dynamic Meme</h1>
-    <p1>blah blah blah</p1>
-    <nav>
-
+    <nav class="navbar navbar-light bg-light color-change">
+        <img src="./assets/images/520pxu.png" width="80" height="80"><span class="navbar-brand mb-0 h1 font-size">Dynamic M3mes</span>
     </nav>
 </header>
-
+<div class="hero"></div>
 <body>
     <main>
         <section class="container">
@@ -51,7 +49,7 @@
         </section>
     </main>
 
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="./assets/js/script.js"></script>
 </body>
 
 </html>
