--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Dynamic Meme</title>
-
 </head>
 
 <header>
@@ -27,25 +26,24 @@
 <body>
     <main>
         <section class="container">
-            <div class="text-selection-box"></div>
-            <button id="random-btn">Generate Random</button>
-            <h2>Search up a meme</h2>
-            <input type="text" placeholder="search">
-            <input type="submit">
+                <div class="text-selection-box"></div>
+                <button id="random-btn">Generate Random</button>
+                <h2>Search up a meme</h2>
+                <input type="text" placeholder="search">
+                <input type="submit">
 
-            <div class="preview-image"></div>
-            <h3>Create your own Meme</h3>
-            <input type="text" placeholder="Add your quote">
-            <input type="submit">
-
-
-            <div id="generated-photos">
-                <img class src="" width="600" height="300" />
-            </div>
+                <div class="preview-image"></div>
+                <h3>Create your own Meme</h3>
+                <input type="text" placeholder="Add your quote">
+                <input type="submit">
+    
+                <div id="generated-photos">
+                    <img class src="" width="600" height="300" />
+                </div>
 
         </section>
 
-        <section id="generator"></section>
+        <section id="generator">
         <h3>Here is the generated meme.</h3>
         <img src="" width="600" height="300" />
         </section>
