--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </section>
     </main>
 
-    <script type="text/javascript" src="./assets/js/script.js"></script>
+    <script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
