made changes to the giphy api key

--- a/index.html
+++ b/index.html
@@ -45,11 +45,15 @@
 
         <section id="generator"></section>
         <h3>Here is the generated meme.</h3>
-        <img src="" width="600" height="300" />
+        <div class="test">
+
+        </div>
+        
+        
         </section>
     </main>
 
-    <script type="text/javascript" src="./assets/js/script.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
