removed extra section class

--- a/index.html
+++ b/index.html
@@ -35,23 +35,13 @@
             <input type="text" placeholder="Add your quote">
             <input type="submit">
         </section>
-<<<<<<< HEAD
-
-        <section id="generator"></section>
-        <h3>Here is the generated meme.</h3>
-        <div class="test">
-
-        </div>
-        
-        
-=======
         <section>
             <div id="generated-photos"><img class src="" width="500" height="300" /> </div>
         </section>
         <section id="generator">
+            <div class="test"></div>
             <h3>Here is the generated meme.</h3>
             <img src="" width="500" height="300" />
->>>>>>> 0133d2480e2bbccb70ac2cb9674d07a351a70529
         </section>
     </main>
 
