updated script for random image

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </section>
     </main>
 
-    <script type="text/javascript" src="./script.js"></script>
+    <script type="text/javascript" src="./assets/js/script.js"></script>
 </body>
 
 </html>
