more changes to the boxed layout

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <input type="text" placeholder="Add your quote">
             <input type="submit">
         </section>
-        <section>
+        <section id="random">
             <div id="generated-photos"><img class src="" width="500" height="300" /> </div>
         </section>
         <section id="generator">
