added api pull from giphy

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="text-selection-box"></div>
             <h2>Search up a meme</h2>
             <input type="text" class="texts" placeholder="Search . .">
-            <input type="submit" class="button">
+            <input type="submit" class="button" id="search-meme">
             <div class="preview-image"></div>
             <h3>Create your own Meme</h3>
             <input type="text" class="texts" placeholder="Add your quote . .">
@@ -37,14 +37,14 @@
         </section>
         <section id="random">
             <div class="card shadow m-3">
-            <div class="card-body"></div>
+            <div class="card-body" id="giphy-display"></div>
         </section>
         <section class="meme">
             <h3>Here is the generated meme.</h3>
         </section>
         <section id="generator">
             <div class="card shadow m-3">
-                <div class="card-body"></div>
+                <div class="card-body" id="image-display"></div>
         </section>
     </main>
 
