--- a/index.html
+++ b/index.html
@@ -31,42 +31,25 @@
         <section class="create">
             <div class="text-selection-box"></div>
             <h2>Search up a meme</h2>
-<<<<<<< HEAD
-            <input type="text" class="texts" placeholder="Search..">
-            <input type="submit" class="'button">
-            <div class="preview-image"></div>
-        </section>
-        <section id="random"> 
-            <button id="random-btn">Generate Random</button>
-        </section> 
-        <section id="random">
-            <div class="card shadow m-3"></div>
-                <div class="card-body"></div>
-        </section>
-        <section class="meme">       
-            <h3>Create your own Meme</h3>
-            <input type="text" class="texts" placeholder="Add your quote..">
-            <input type="submit" class="button">
-=======
             <input type="text" class="texts" placeholder="Search . .">
-            <input type="submit" class="button" id="search-meme">
+            <input type="submit" class="button">
             <div class="preview-image"></div>
+        </section>
+        <section>
+            <button id="random-btn">Generate Random</button>
+        </section>
+        <section id="random">
+            <div class="card shadow m-3">
+            <div class="card-body"></div>
+        </section> 
+        <section class="meme">   
             <h3>Create your own Meme</h3>
             <input type="text" class="texts" placeholder="Add your quote . .">
-            <input type="submit" class="button">
-            <button id="random-btn">Generate Random</button>
+            <input type="submit" class="button">     
         </section>
         <section id="random">
             <div class="card shadow m-3">
             <div class="card-body" id="giphy-display"></div>
-        </section>
-        <section class="meme">
-            <h3>Here is the generated meme.</h3>
-        </section>
-        <section id="generator">
-            <div class="card shadow m-3">
-                <div class="card-body" id="image-display"></div>
->>>>>>> 490c401b1aed8c78dbb56018c333244831fa533d
         </section>
         <section id="generator">
             <div class="card shadow m-3"></div>
@@ -74,7 +57,7 @@
         </section>       
     </main>
 
-    <script type="text/javascript" src="./assets/js/script.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
