--- a/index.html
+++ b/index.html
@@ -20,47 +20,55 @@
 
 <header>
     <nav class="navbar navbar-light bg-light color-change">
-        <img src="./assets/images/520pxu.png" width="80" height="80"><span
-            class="navbar-brand mb-0 h1 font-size" id="project-title">Dynamic M3mes</span>
+        <img src="./assets/images/520pxu.png" width="80" height="80"><span class="navbar-brand mb-0 h1 font-size"
+            id="project-title">Dynamic M3mes</span>
     </nav>
 </header>
 <div class="hero"></div>
 
 <body>
     <main class="flex-column col-12 justify-content-center align-items-center" id="grid-container w-100%">
-    <div class="searchable row justify-content-center">
-        <section class="meme col-5 p-3">
-            <h2>Search Memes</h2>
-            <input type="text" class="texts" placeholder="Search . .">
-            <input type="submit" class="button" id="search-meme">
-        </section>
-        <section class="meme-search col-7" id="random">
-            <div class="card shadow m-3">
-            <div class="card-body flex row justify-content-center" id="giphy-display">
-            </div>
-            </div>
-        </section>
-    </div>
+        <div class="searchable row justify-content-center">
+            <section class="meme col-5 p-3">
+                <h2>Search Memes</h2>
+                <input type="text" class="texts" placeholder="Search . .">
+                <input type="submit" class="button" id="search-meme">
+            </section>
+            <section class="meme-search col-7" id="random">
+                <div class="card shadow m-3">
+                    <div class="card-body flex row justify-content-center" id="giphy-display">
+                    </div>
+                </div>
+            </section>
+        </div>
 
-    <div class="randomized row justify-content-center">
-        <section class="meme col-5">
-            <div class="create-your-own">
-            <h2>Create your own Meme</h2>
-            <input type="text" class="texts" placeholder="Add your quote . .">
-            <input type="submit" class="button">
-            </div>
-            <div class="generate">
-            <button id="random-btn">Generate Random</button>
-            </div>
-        </section>
-        <section class="meme-search col-7" id="generator">
-            <div class="card shadow m-3">
-                <div class="card-body" id="image-display"></div>
-            </div>
-        </section> 
-    </div> 
+        <div class="randomized row justify-content-center">
+            <section class="meme col-5">
+                <div class="create-your-own">
+                    <h2>Create your own Meme</h2>
+                    <input type="text" class="texts" id="value" placeholder="Add your quote . .">
+                    <input type="submit" class="button" id="submit-text">
+                    <fieldset>
+                        <input type="radio" id="top" name="text" value="top" checked>
+                        <label for="bottom">Top</label>
+                        <input type="radio" id="bottom" name="text" value="bottom">
+                        <label for="bottom">Bottom</label>
+                    </fieldset>
+                </div>
+                <div class="generate">
+                    <button id="random-btn">Generate Random Image</button>
+                </div>
+            </section>
+            <section class="meme-search col-7" id="generator">
+                <div class="card justify-content-center shadow m-3">
+                    <div class="card-body" id="image-display"></div>
+                    <div class="top moveable"></div>
+                    <div class="bottom moveable"></div>
+                </div>
+            </section>
+        </div>
     </main>
-
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="./assets/js/script.js"></script>
 </body>
 
