--- a/index.html
+++ b/index.html
@@ -27,52 +27,51 @@
 <div class="hero"></div>
 
 <body>
-    <main class="flex-column col-12 justify-content-center align-items-center" id="grid-container w-100%">
-        <div class="searchable row justify-content-center">
-            <section class="meme col-5 p-3">
-                <h2>Search Memes</h2>
-                <input type="text" class="texts" placeholder="Search . .">
-                <input type="submit" class="button" id="search-meme">
-            </section>
-            <section class="meme-search col-7" id="random">
-                <div class="card shadow m-3">
-                    <div class="card-body flex row justify-content-center" id="giphy-display">
+    <main class="container justify-content-center align-items-center w-100%" id="grid-container">
+        <div class="main row">
+            <aside class="searchable justify-content-center">
+                <section class="meme p-3">
+                    <h2>Search Memes</h2>
+                    <div class="search-data">
+                        <datalist id="searches" class="previous-searches"></datalist>
+                        <input type="text" class="texts" placeholder="Search . ." list="searches">
+                        <input type="submit" class="button" id="search-meme">
                     </div>
-                </div>
-            </section>
-        </div>
-
-        <div class="randomized row justify-content-center">
-            <section class="meme col-5">
-                <div class="create-your-own">
-                    <h2>Create Your Text</h2>
-                    <input type="text" class="texts" id="value" placeholder="Add your quote . .">
-                    <input type="submit" class="button" id="submit-text">
-                    <fieldset>
-                        <input type="radio" id="top" name="text" value="top" checked>
-                        <label for="bottom">Top</label>
-                        <input type="radio" id="bottom" name="text" value="bottom">
-                        <label for="bottom">Bottom</label>
-                    </fieldset>
-                </div>
-                <div class="generate">
-                    <button class="random-btn" id="random-btn">Generate Random Image</button><br>
-                    <input class="random-btn" type="button" id="loadFileXml" value="Upload Your Own Image" onclick="document.getElementById('file').click();" />
-                    <input type="file" style="display:none;" id="file" name="file"/>
-                </div>
-            </section>
-            <section class="meme-search col-7" id="generator">
-                <div class="card justify-content-center shadow m-3">
-                    <div class="card-body" id="image-display"></div>
-                    <img id="myImg" src="#" alt="Display Uploaded Image">
-                    <div class="top moveable"></div>
-                    <div class="bottom moveable"></div>
-                </div>
-            </section>
+                    <div class="generate">
+                        <button class="random-btn" id="random-btn">Generate Random Image</button><br>
+                        <input class="random-btn" type="button" id="loadFileXml" value="Upload Your Own Image"
+                            onclick="document.getElementById('file').click();" />
+                        <input type="file" style="display:none;" id="file" name="file" />
+                    </div>
+                    <div class="create-your-own">
+                        <label>
+                            <h2>Top Text</h2>
+                        </label><br>
+                        <input type="text" id="topTextInput">
+                        <br>
+                        <label>
+                            <h2>Bottom Text</h2>
+                        </label><br>
+                        <input type="text" id="bottomTextInput">
+                    </div>
+                </section>
+            </aside>
+            <div class="randomized col-7 justify-content-center">
+                <section class="meme-search" id="random">
+                    <div class="card shadow m-3">
+                        <div class="card-body flex row justify-content-center" id="giphy-display">
+                        </div>
+                    </div>
+                </section>
+                <section class="meme justify-content-center" id="generator">
+                    <h2 class="final"><p>Display Your Meme</p></h2>
+                    <canvas class="final" id="meme"></canvas>
+                </section>
+            </div>
         </div>
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script type="text/javascript" src="./assets/js/script.js"></script>
+    <script type="text/javascript" src="./assets/js/javascript.js"></script>
 </body>
 
 </html>
