--- a/index.html
+++ b/index.html
@@ -64,8 +64,12 @@
                     </div>
                 </section>
                 <section class="meme justify-content-center" id="generator">
-                    <h2 class="final"><p>Display Your Meme</p></h2>
-                    <canvas class="final" id="meme"></canvas>
+                    <div class="card shadow m-3">
+                        <div class="card-body flex row justify-content-center" id="giphy-display">
+                            <h2 class="final col-7"><p>Display Your Meme</p></h2>
+                            <canvas id="meme"></canvas>
+                        </div>
+                    </div>
                 </section>
             </div>
         </div>
